Changed test text code and added another line of code.

--- a/WebApplication4/G5-test2.html
+++ b/WebApplication4/G5-test2.html
@@ -174,7 +174,8 @@ text-align: center;
                         {% endif %}
                     </p>
                     <p>&nbsp; </p>
-                    <p> Testing to see if this changes</p>
+                    <p> Exited visual studios and reentered to see if this changes</p>
+                    <p> added another line of text to see if this works.</p>
 
 
                 </section>
