--- a/WebApplication4/G5-test2.html
+++ b/WebApplication4/G5-test2.html
@@ -121,7 +121,9 @@ text-align: center;
 
                         <a href="" itemprop="url" style="width: 30%;">
                             <div class="video-container">
-                                <iframe src="https://www.youtube.com/embed/v6xwFDM9tNw" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/v6xwFDM9tNw?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+
+
                             </div>
 
                             <div class="content">
@@ -137,8 +139,8 @@ text-align: center;
 
                         <a href="" itemprop="url" style="width: 30%;">
                             <div class="video-container">
-                                <iframe src="https://www.youtube.com/embed/0JPAiSgvPPs" frameborder="0" allowfullscreen></iframe>
-                            </div>
+                                <iframe src="https://www.youtube.com/embed/0JPAiSgvPPs?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                           </div>
                             <div class="content">
                                 <h4 itemprop="headline">Use your Subject Matter Expertise On-Demand</h4>
                                 <h4 itemprop="headline"><b style="font-size: 12pt;">Management Consulting</b></h4>
@@ -174,8 +176,7 @@ text-align: center;
                         {% endif %}
                     </p>
                     <p>&nbsp; </p>
-                    <p> Exited visual studios and reentered to see if this changes</p>
-                    <p> added another line of text to see if this works.</p>
+
 
 
                 </section>
