Fixed video and removed anchor tags

--- a/WebApplication4/G5-test2.html
+++ b/WebApplication4/G5-test2.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link rel ="stylesheet" href="uot.css" /> 
+    <link rel="stylesheet" href="uot.css" />
     <style>
-        .Buttons{
-text-align: center;
+        .Buttons {
+            text-align: center;
+            #content
 
-  #content{
-    padding-top: 0px;
-    padding-bottom: 0px;
-}
+        {
+            padding-top: 0px;
+            padding-bottom: 0px;
+        }
     </style>
 </head>
-    
+
 <body>
     <section class="hero-a" style="margin-top: 0px; margin-bottom: 0px;">
         <div class="slideshow-a" style="margin-top: 0px;">
@@ -95,91 +96,91 @@ text-align: center;
 
             </div>
 
-                <section class="blog-posts-cta">
-                    <header class="section-header">
-                        <h2 class="hx-a" id="BlogPostFeed">Why should SMEs join UoT</h2>
-                        <h3 class="hx-b">Enjoy a World of Consulting Possibilities</h3>
-                    </header>
+            <section class="blog-posts-cta">
+                <header class="section-header">
+                    <h2 class="hx-a" id="BlogPostFeed">Why should SMEs join UoT</h2>
+                    <h3 class="hx-b">Enjoy a World of Consulting Possibilities</h3>
+                </header>
 
-                    <div class="wrapper">
-                        <a href="#HowItWorks" itemprop="url" style="width: 30%;">
-                            <div class="video-container">
-                                <iframe src="https://www.youtube.com/embed/VqnilLKrzUo?rel=0" frameborder="0" allowfullscreen></iframe>
+                <div class="wrapper">
+                    <a href="#HowItWorks" itemprop="url" style="width: 30%;">
+                        <div class="video-container">
+                            <iframe src="https://www.youtube.com/embed/VqnilLKrzUo?rel=0" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                        <div class="content">
+                            <h4 itemprop="headline">How It Works</h4>
+                            <div itemprop="description">
+                                <p style="font-size: 10pt;">Finding and engaging on-demand Subject Matter Experts with UoT is quick and easy.</p>
+                                <p style="font-size: 10pt;"><b>Identify your project:</b>   Define your project requirements.  Search for SMEs.  Send a request to your preferred SMEs.</p>
+
+                                <p style="font-size: 10pt;"><b>Choose an SME:</b>  Discuss your project with the SME in the secure UoT Marketplace. Then negotiate deliverables and pricing.</p>
+
+                                <p style="font-size: 10pt;"><b>Get started:</b>   The SME joins and works with your team online or onsite. Once the project is completed, UoT releases the SME’s payment.</p>
                             </div>
-                            <div class="content">
-                                <h4 itemprop="headline">How It Works</h4>
-                                <div itemprop="description">
-                                    <p style="font-size: 10pt;">Finding and engaging on-demand Subject Matter Experts with UoT is quick and easy.</p>
-                                    <p style="font-size: 10pt;"><b>Identify your project:</b>   Define your project requirements.  Search for SMEs.  Send a request to your preferred SMEs.</p>
+                        </div>
+                    </a>
 
-                                    <p style="font-size: 10pt;"><b>Choose an SME:</b>  Discuss your project with the SME in the secure UoT Marketplace. Then negotiate deliverables and pricing.</p>
+<!--                    <a href="" itemprop="url" style="width: 30%;">-->
+                        <div class="video-container">
+                            <iframe src="https://www.youtube.com/embed/v6xwFDM9tNw?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position: absolute; width: 100%; height: 100%; left: 0" allowfullscreen></iframe>
 
-                                    <p style="font-size: 10pt;"><b>Get started:</b>   The SME joins and works with your team online or onsite. Once the project is completed, UoT releases the SME’s payment.</p>
-                                </div>
+
+                        </div>
+
+                        <div class="content">
+                            <h4 itemprop="headline">Use Your Expertise Where You Want, When You Want</h4>
+                            <div itemprop="description">
+                                <p style="font-size: 10pt;">Whether you are eager to give back, were pushed into early retirement, or simply seeking better work-life balance, UoT gives you a powerful consulting platform and professional network to take the next step.</p>
+                                <p style="font-size: 10pt;">Collaborate with a vibrant community of your peers.  Work on meaningful projects. Engage with great clients. Continue to make a difference with your unique knowledge and expertise.</p>
+
+                                <p style="font-size: 10pt;">UoT enables it all.  And it simplifies your transition to consulting by handling all the business details so you can focus solely on doing what you love.</p>
                             </div>
-                        </a>
+                        </div>
+<!--                    </a>-->
 
-                        <a href="" itemprop="url" style="width: 30%;">
-                            <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/v6xwFDM9tNw?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+<!--                    <a href="" itemprop="url" style="width: 30%;">-->
+                        <div class="video-container">
+                            <iframe src="https://www.youtube.com/embed/0JPAiSgvPPs?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position: absolute; width: 100%; height: 100%; left: 0" allowfullscreen></iframe>
+                        </div>
+                        <div class="content">
+                            <h4 itemprop="headline">Use your Subject Matter Expertise On-Demand</h4>
+                            <h4 itemprop="headline"><b style="font-size: 12pt;">Management Consulting</b></h4>
+                            <p style="line-height: 90%;"><b style="font-size: 10pt;">Growth. Organization. Operations.</b></p>
 
+                            <p style="font-size: 10pt;">Expertise to start, grow, manage, operate and exit businesses successfully.</p>
 
-                            </div>
+                            <p style="line-height: 90%;">
+                                <h4 itemprop="headline"><b style="font-size: 12pt;">Information Technology</b>
+                            </p>
+                            <p style="line-height: 90%;"><b style="font-size: 10pt;">Oversight.  Decision Support.  Management.  Operations.</b></p>
 
-                            <div class="content">
-                                <h4 itemprop="headline">Use Your Expertise Where You Want, When You Want</h4>
-                                <div itemprop="description">
-                                    <p style="font-size: 10pt;">Whether you are eager to give back, were pushed into early retirement, or simply seeking better work-life balance, UoT gives you a powerful consulting platform and professional network to take the next step.</p>
-                                    <p style="font-size: 10pt;">Collaborate with a vibrant community of your peers.  Work on meaningful projects. Engage with great clients. Continue to make a difference with your unique knowledge and expertise.</p>
+                            <p style="font-size: 10pt;">Expertise to use IT to achieve key business objectives.</p>
 
-                                    <p style="font-size: 10pt;">UoT enables it all.  And it simplifies your transition to consulting by handling all the business details so you can focus solely on doing what you love.</p>
-                                </div>
-                            </div>
-                        </a>
+                            <p style="line-height: 90%;">
+                                <h4 itemprop="headline"><b style="font-size: 12pt;">Expertise in Critical Markets</b></h4>
+                            </p>
+                            <p style="line-height: 90%;"><b style="font-size: 10pt;">Government.   Health & Life Sciences.  Technology.</b></p>
 
-                        <a href="" itemprop="url" style="width: 30%;">
-                            <div class="video-container">
-                                <iframe src="https://www.youtube.com/embed/0JPAiSgvPPs?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
-                           </div>
-                            <div class="content">
-                                <h4 itemprop="headline">Use your Subject Matter Expertise On-Demand</h4>
-                                <h4 itemprop="headline"><b style="font-size: 12pt;">Management Consulting</b></h4>
-                                <p style="line-height: 90%;"><b style="font-size: 10pt;">Growth. Organization. Operations.</b></p>
+                            <p style="font-size: 10pt;">The world’s best expertise in today’s critical public sector, healthcare and IT markets. More coming.</p>
+                        </div>
 
-                                <p style="font-size: 10pt;">Expertise to start, grow, manage, operate and exit businesses successfully.</p>
-
-                                <p style="line-height: 90%;">
-                                    <h4 itemprop="headline"><b style="font-size: 12pt;">Information Technology</b>
-                                </p>
-                                <p style="line-height: 90%;"><b style="font-size: 10pt;">Oversight.  Decision Support.  Management.  Operations.</b></p>
-
-                                <p style="font-size: 10pt;">Expertise to use IT to achieve key business objectives.</p>
-
-                                <p style="line-height: 90%;">
-                                    <h4 itemprop="headline"><b style="font-size: 12pt;">Expertise in Critical Markets</b></h4>
-                                </p>
-                                <p style="line-height: 90%;"><b style="font-size: 10pt;">Government.   Health & Life Sciences.  Technology.</b></p>
-
-                                <p style="font-size: 10pt;">The world’s best expertise in today’s critical public sector, healthcare and IT markets. More coming.</p>
-                            </div>
-
-                        </a>
-                    </div>
-                    <p class="Buttons">
-                        <a href="/expertise" class="button-a" style="align: left;">Learn More about our Expertise</a>
-                        <!--<a href="/blog" class="button-a" style="align:center;">Visit Our Blog</a> -->
-                        <!-- <a href="/blog" class="button-a" style="align:right;">Request SME Benefits Button placeholder</a> -->
-                        {% if current_user == blank %}
+<!--                    </a>-->
+                </div>
+        <p class="Buttons">
+            <a href="/expertise" class="button-a" style="align: left;">Learn More about our Expertise</a>
+            <!--<a href="/blog" class="button-a" style="align:center;">Visit Our Blog</a> -->
+            <!-- <a href="/blog" class="button-a" style="align:right;">Request SME Benefits Button placeholder</a> -->
+            {% if current_user == blank %}
         <a href="/join-our-community" class="button-a">Join Our Community</a>
-                        {% else %}
+            {% else %}
         <a href="/search?sort=" class="button-a">Search for experts</a>
-                        {% endif %}
-                    </p>
-                    <p>&nbsp; </p>
+            {% endif %}
+        </p>
+        <p>&nbsp; </p>
 
 
 
-                </section>
+        </section>
             </div>
     </section>
 
