--- a/WebApplication4/G5-test2.html
+++ b/WebApplication4/G5-test2.html
@@ -8,6 +8,7 @@
         .Buttons {
             text-align: center;
             #content
+        }
 
         {
             padding-top: 0px;
@@ -36,6 +37,25 @@
 
         <p></p>
         <div class="wrapper-a" style="margin-bottom: 0px;">
+
+            <div>
+                <header class="section-header">
+                    <h1 class="hx-a">SME Benefits</h1>
+                    <h2 class="hx-b">Access the World’s Best Projects On Demand.</h2>
+                </header>
+
+                <h3>Join A Global Marketplace Where Expertise Is King.</h3>
+
+                <p>Now there’s a fast, easy way for seasoned Subject Matter Experts (<i>SMEs</i>) to connect with businesses and organizations who need them.</p>
+
+                <p>Upside of Talent (UoT) is a powerful digital marketplace for experienced professionals to showcase and market their subject matter expertise and services for project-based work, whether for hire or pro bono.</p>
+
+                <p>UoT gives Subject Matter Experts more options, more exposure and more ways to offer their proven knowledge and know-how on their terms to businesses, anywhere, anytime.</p>
+
+                <h3>SME Benefits</h3>
+                <a href="https://d2rw3as29v290b.cloudfront.net/instances/195/uploads/ckeditor/attachment_file/data/3564/UoT_SME_Membership_Overview.pdf" class="button-a">Download the PDF!</a>
+            </div>
+
 
             <header class="section-header">
                 <h2 class="hx-a">Why should SMEs join UoT?</h2>
@@ -103,7 +123,7 @@
                 </header>
 
                 <div class="wrapper">
-                    <a href="#HowItWorks" itemprop="url" style="width: 30%;">
+                    <div style="width: 30%;">
                         <div class="video-container">
                             <iframe src="https://www.youtube.com/embed/VqnilLKrzUo?rel=0" frameborder="0" allowfullscreen></iframe>
                         </div>
@@ -118,11 +138,11 @@
                                 <p style="font-size: 10pt;"><b>Get started:</b>   The SME joins and works with your team online or onsite. Once the project is completed, UoT releases the SME’s payment.</p>
                             </div>
                         </div>
-                    </a>
+                    </div>
 
-<!--                    <a href="" itemprop="url" style="width: 30%;">-->
+                    <div style="width: 30%;">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/v6xwFDM9tNw?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position: absolute; width: 100%; height: 100%; left: 0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/v6xwFDM9tNw?rel=0" width="640" height="360" frameborder="0" style="position: absolute; width: 100%; height: 100%; left: 0" allowfullscreen></iframe>
 
 
                         </div>
@@ -136,11 +156,11 @@
                                 <p style="font-size: 10pt;">UoT enables it all.  And it simplifies your transition to consulting by handling all the business details so you can focus solely on doing what you love.</p>
                             </div>
                         </div>
-<!--                    </a>-->
+                    </div>
 
-<!--                    <a href="" itemprop="url" style="width: 30%;">-->
+                    <div style="width: 30%;">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/0JPAiSgvPPs?rel=0?ecver=2" width="640" height="360" frameborder="0" style="position: absolute; width: 100%; height: 100%; left: 0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/0JPAiSgvPPs?rel=0" width="640" height="360" frameborder="0" style="position: absolute; width: 100%; height: 100%; left: 0" allowfullscreen></iframe>
                         </div>
                         <div class="content">
                             <h4 itemprop="headline">Use your Subject Matter Expertise On-Demand</h4>
@@ -164,24 +184,24 @@
                             <p style="font-size: 10pt;">The world’s best expertise in today’s critical public sector, healthcare and IT markets. More coming.</p>
                         </div>
 
-<!--                    </a>-->
+                    </div>
                 </div>
-        <p class="Buttons">
-            <a href="/expertise" class="button-a" style="align: left;">Learn More about our Expertise</a>
-            <!--<a href="/blog" class="button-a" style="align:center;">Visit Our Blog</a> -->
-            <!-- <a href="/blog" class="button-a" style="align:right;">Request SME Benefits Button placeholder</a> -->
-            {% if current_user == blank %}
+                <p class="Buttons">
+                    <a href="/expertise" class="button-a" style="align: left;">Learn More about our Expertise</a>
+                    <!--<a href="/blog" class="button-a" style="align:center;">Visit Our Blog</a> -->
+                    <!-- <a href="/blog" class="button-a" style="align:right;">Request SME Benefits Button placeholder</a> -->
+                    {% if current_user == blank %}
         <a href="/join-our-community" class="button-a">Join Our Community</a>
-            {% else %}
+                    {% else %}
         <a href="/search?sort=" class="button-a">Search for experts</a>
-            {% endif %}
-        </p>
-        <p>&nbsp; </p>
+                    {% endif %}
+                </p>
+                <p>&nbsp; </p>
 
 
 
-        </section>
-            </div>
+            </section>
+        </div>
     </section>
 
 
