Added in lines to seperate sections and changed pdf button.

--- a/WebApplication4/G5-test2.html
+++ b/WebApplication4/G5-test2.html
@@ -53,14 +53,19 @@
                 <p>UoT gives Subject Matter Experts more options, more exposure and more ways to offer their proven knowledge and know-how on their terms to businesses, anywhere, anytime.</p>
 
                 <h3>SME Benefits</h3>
-                <a href="https://d2rw3as29v290b.cloudfront.net/instances/195/uploads/ckeditor/attachment_file/data/3564/UoT_SME_Membership_Overview.pdf" class="button-a">Download the PDF!</a>
+                <div class="Buttons">
+                    <a href="https://d2rw3as29v290b.cloudfront.net/instances/195/uploads/ckeditor/attachment_file/data/3564/UoT_SME_Membership_Overview.pdf" class="button-a">Check out our full Sme Benefits!</a>
+
+                </div>
             </div>
 
+            <hr class="sep">
 
             <header class="section-header">
                 <h2 class="hx-a">Why should SMEs join UoT?</h2>
                 <h3 class="hx-b">Join a Global Community of Subject Matter Experts</h3>
             </header>
+
 
             <div class="cta-boxes-b">
                 <article>
@@ -115,6 +120,8 @@
                 </article>
 
             </div>
+
+            <hr class="sep">
 
             <section class="blog-posts-cta">
                 <header class="section-header">
